fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ body {
   font-family: 'Kalam', cursive;
   position: absolute;
   top: 3%;
+  left: 0;
   width: 100%;
 }
 
@@ -173,6 +174,7 @@ body {
   font-family: 'Kalam', cursive;
   position: absolute;
   bottom: 3%;
+  left: 0;
   width: 100%;
 }
 
